--- a/BIOPAL_Group_8.ipynb
+++ b/BIOPAL_Group_8.ipynb
@@ -980,7 +980,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 679
+          "height": 677
         },
         "id": "0hNUBmjeSHkt",
         "outputId": "da4e233c-ebed-4f5f-d12c-c0a93c14036d"
@@ -3514,7 +3514,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 2402
         },
         "id": "fWhG993b3VRd",
         "outputId": "f97fa87f-828f-4808-ffab-30df02152856"
@@ -4575,7 +4575,7 @@
         "id": "6cg3OpdIfhH9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1207
         },
         "outputId": "4f61a6c6-e33a-4222-9977-c2b4dd0f7782"
       },
@@ -4596,7 +4596,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Interpretation of boxplots**\n",
+        "### **Interpretation of boxplots**\n",
         "\n",
         "**RIDAGEYR**: Relatively symmetrical distribution\n",
         "\n",
@@ -4665,7 +4665,7 @@
         "id": "UqVCRFAu8i4w",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1138
         },
         "outputId": "37eb017c-b8bd-418d-a82a-f8a84e1341de"
       },
@@ -4700,7 +4700,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Interpretation for Annual Median Trends\n",
+        "### Interpretation for Annual Median Trends\n",
         "\n",
         "**PHQ9**: The plot shows that the median PHQ9 score remained relatively low and stable across the survey years. There are minor fluctuations, but no clear upward or downward trend in the median depression severity is apparent in this age group over this period.\n",
         "\n",
@@ -4759,7 +4759,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 672
+          "height": 671
         },
         "id": "i7G0XlOhlLbw",
         "outputId": "449a4718-92b6-4aa1-870e-5b4319478569"
