--- a/BIOPAL_Group_8.ipynb
+++ b/BIOPAL_Group_8.ipynb
@@ -39,7 +39,7 @@
       "source": [
         "Group member: Yasmin S10267172J                \n",
         "Class: BMS P02             \n",
-        "Link to GitHub repo:           \n",
+        "Link to GitHub repo:  https://github.com/yyasminhz/rahh/blob/main/BIOPAL_Group_8.ipynb         \n",
         "Link to Google Colab: https://colab.research.google.com/drive/1EQsmhrpDR0Ln_-r2gnnxTd55tpIw17Mo?usp=sharing"
       ],
       "metadata": {
@@ -442,7 +442,7 @@
         "id": "Asz8eTpjgGTc",
         "outputId": "94a0d735-bf89-448c-dbd1-d0ae99d04050"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -985,7 +985,7 @@
         "id": "0hNUBmjeSHkt",
         "outputId": "da4e233c-ebed-4f5f-d12c-c0a93c14036d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1476,7 +1476,7 @@
         "id": "iMe7nRBTFMOM",
         "outputId": "5190b50c-fc1c-4ed1-f7be-391e6c875b09"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1979,7 +1979,7 @@
         "id": "n1CIi6NRH8jK",
         "outputId": "7be74b7e-fc9a-4067-a325-4f5dcdc9c257"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3519,7 +3519,7 @@
         "id": "fWhG993b3VRd",
         "outputId": "f97fa87f-828f-4808-ffab-30df02152856"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3689,7 +3689,7 @@
         "id": "Ws5bbVHqbBwa",
         "outputId": "aa6b63dd-f8e4-4abc-b4ba-a0653c40c575"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3818,7 +3818,7 @@
         "id": "gPK4t4ezfRH9",
         "outputId": "768011a3-5c3e-4373-ed78-6c902d08f98f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4302,7 +4302,7 @@
         },
         "outputId": "1a567e9f-7549-495c-f12a-cf1b1d478ef9"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4445,7 +4445,7 @@
         },
         "outputId": "36429e0e-6cb9-423c-8022-36eb8a845ecc"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4507,7 +4507,8 @@
         "\n",
         "2. Histograms & Q–Q plots (1st–99th percentile zoom)  \n",
         "   - Haemoglobin, Heart Rate, Cholesterol, Age – Visually bell-shaped in the centre, Q–Q points hug the line for most of the range. A few extreme tails remain, but the middle 95–98 % looks approximately normal  \n",
-        "   - CRP, PHQ-9, SleepHours – Even after dropping the extreme 1 % on each side, the histograms stay skewed and the Q–Q plots bend away from the line—clear evidence of heavy tails or floor effects (e.g. many zeros in PHQ-9).\n",
+        "   - CRP, PHQ-9, SleepHours – Even after dropping the extreme 1 % on each side, the histograms stay skewed and the Q–Q plots bend away from the line which is clear evidence of heavy tails\n",
+        "   \n",
         "\n",
         "3. Conclusion  \n",
         "   1. Variables with “trivial deviations” (Hb, heart rate, cholesterol) – Safe to treat as approximately normal in most regression or ANOVA models (after excluding outliers)\n",
@@ -4579,7 +4580,7 @@
         },
         "outputId": "4f61a6c6-e33a-4222-9977-c2b4dd0f7782"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4669,7 +4670,7 @@
         },
         "outputId": "37eb017c-b8bd-418d-a82a-f8a84e1341de"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4764,7 +4765,7 @@
         "id": "i7G0XlOhlLbw",
         "outputId": "449a4718-92b6-4aa1-870e-5b4319478569"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4956,7 +4957,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
